chyba wygrzane jest bo jak nie to koniec